velero/block-velero-restore/.chainsaw-test/bad-restore.yaml
apiVersion: velero.io/v1
kind: Restore
metadata:
  name: badrestore01
spec:
  backupName: a-very-special-backup
  namespaceMapping:
    foo: kube-system
---
apiVersion: velero.io/v1
kind: Restore
metadata:
  name: badrestore02
spec:
  backupName: a-very-special-backup
  includedNamespaces:
  - '*'
  excludedNamespaces:
  - some-namespace
  namespaceMapping:
    foo: kube-node-lease
