velero/block-velero-restore/.chainsaw-test/chainsaw-step-00-assert-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: restores.velero.io
spec: {}
status:
  acceptedNames:
    kind: Restore
    listKind: RestoreList
    plural: restores
    singular: restore
  storedVersions:
  - v1
