velero/block-velero-restore/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-velero-restore
status:
  ready: true
